--- a/1.Sales Prediction/train.ipynb
+++ b/1.Sales Prediction/train.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1a6ec5ef",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "07df1ee5",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "4           NaN      6    15  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f8e3fe34",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
+   "id": "c5025a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>168607.0</td>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>168179.000000</td>\n",
+       "      <td>114961.000000</td>\n",
+       "      <td>114961.000000</td>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>83808.000000</td>\n",
+       "      <td>83808.000000</td>\n",
+       "      <td>168607.000000</td>\n",
+       "      <td>168607.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7720.344547</td>\n",
+       "      <td>763.247244</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.447081</td>\n",
+       "      <td>0.193634</td>\n",
+       "      <td>5452.959823</td>\n",
+       "      <td>7.233845</td>\n",
+       "      <td>2008.710563</td>\n",
+       "      <td>0.497061</td>\n",
+       "      <td>23.264533</td>\n",
+       "      <td>2011.753377</td>\n",
+       "      <td>5.855522</td>\n",
+       "      <td>13.830737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3432.319164</td>\n",
+       "      <td>401.002459</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.497193</td>\n",
+       "      <td>0.395146</td>\n",
+       "      <td>7822.034528</td>\n",
+       "      <td>3.208495</td>\n",
+       "      <td>5.965996</td>\n",
+       "      <td>0.499993</td>\n",
+       "      <td>14.092297</td>\n",
+       "      <td>1.663020</td>\n",
+       "      <td>3.327141</td>\n",
+       "      <td>0.777344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1900.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5417.000000</td>\n",
+       "      <td>520.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>710.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7078.000000</td>\n",
+       "      <td>678.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2320.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>9235.000000</td>\n",
+       "      <td>893.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6880.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>43559.000000</td>\n",
+       "      <td>5192.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>75860.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Sales      Customers      Open          Promo  SchoolHoliday  \\\n",
+       "count  168607.000000  168607.000000  168607.0  168607.000000  168607.000000   \n",
+       "mean     7720.344547     763.247244       1.0       0.447081       0.193634   \n",
+       "std      3432.319164     401.002459       0.0       0.497193       0.395146   \n",
+       "min       326.000000      40.000000       1.0       0.000000       0.000000   \n",
+       "25%      5417.000000     520.000000       1.0       0.000000       0.000000   \n",
+       "50%      7078.000000     678.000000       1.0       0.000000       0.000000   \n",
+       "75%      9235.000000     893.000000       1.0       1.000000       0.000000   \n",
+       "max     43559.000000    5192.000000       1.0       1.000000       1.000000   \n",
+       "\n",
+       "       CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
+       "count        168179.000000              114961.000000   \n",
+       "mean           5452.959823                   7.233845   \n",
+       "std            7822.034528                   3.208495   \n",
+       "min              20.000000                   1.000000   \n",
+       "25%             710.000000                   4.000000   \n",
+       "50%            2320.000000                   8.000000   \n",
+       "75%            6880.000000                  10.000000   \n",
+       "max           75860.000000                  12.000000   \n",
+       "\n",
+       "       CompetitionOpenSinceYear         Promo2  Promo2SinceWeek  \\\n",
+       "count             114961.000000  168607.000000     83808.000000   \n",
+       "mean                2008.710563       0.497061        23.264533   \n",
+       "std                    5.965996       0.499993        14.092297   \n",
+       "min                 1900.000000       0.000000         1.000000   \n",
+       "25%                 2006.000000       0.000000        13.000000   \n",
+       "50%                 2010.000000       0.000000        22.000000   \n",
+       "75%                 2013.000000       1.000000        37.000000   \n",
+       "max                 2015.000000       1.000000        50.000000   \n",
+       "\n",
+       "       Promo2SinceYear          month           year  \n",
+       "count     83808.000000  168607.000000  168607.000000  \n",
+       "mean       2011.753377       5.855522      13.830737  \n",
+       "std           1.663020       3.327141       0.777344  \n",
+       "min        2009.000000       1.000000      13.000000  \n",
+       "25%        2011.000000       3.000000      13.000000  \n",
+       "50%        2012.000000       6.000000      14.000000  \n",
+       "75%        2013.000000       8.000000      14.000000  \n",
+       "max        2015.000000      12.000000      15.000000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "bf26d30f",
    "metadata": {},
    "outputs": [
@@ -499,7 +725,36 @@
    ],
    "source": [
     "print(\"Percentage of missing values in each column:\\n\", 40*'-')\n",
-    "print(((_data.isnull().sum() / _data.shape[0]) * 100).sort_values(ascending=False))"
+    "print(((_data.isna().sum() / _data.shape[0]) * 100).sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "af747690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Promo2 not avilable percentage: 50.29387866458688\n",
+      "    \n",
+      "\n",
+      "    competition hasn't per()centage: 0.2538447395422491\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "    Promo2 not avilable percentage: {len(_data.loc[_data.Promo2==0, 'Promo2'])/len(_data['Promo2']) * 100}\n",
+    "    \"\"\")\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "    competition hasn't per()centage: {_data['CompetitionDistance'].isna().sum()/len(_data['CompetitionDistance']) * 100}\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -512,13 +767,194 @@
     "* Promo2SinceWeek\n",
     "* PromoInterval\n",
     "* CompetitionOpenSinceYear\n",
-    "* CompetitionOpenSinceMonth"
+    "* CompetitionOpenSinceMonth\n",
+    "\n",
+    "no no, we won't remove thus informations, beacuse they have real realationship with main column data proccess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dab19c36",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Data Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ec5f47e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data = _data.copy().drop('Open', axis=1)\n",
+    "\n",
+    "clean_data.loc[clean_data.Promo2==0, ['Promo2SinceYear', 'Promo2SinceWeek']] = 0\n",
+    "clean_data.loc[clean_data.Promo2==0, 'PromoInterval'] = 'None'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b378bbae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdn_condition = clean_data.CompetitionDistance.isna()\n",
+    "clean_data.loc[cdn_condition, \"HasCompetition\"] = 0\n",
+    "clean_data.loc[~cdn_condition, \"HasCompetition\"] = 1\n",
+    "clean_data[\"HasCompetition\"] = clean_data[\"HasCompetition\"].astype(\"category\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48c37df4",
+   "metadata": {},
+   "source": [
+    "Identify Categorical column:\n",
+    "* Promo\n",
+    "* StateHoliday\n",
+    "* SchoolHoliday\n",
+    "* StoreType\n",
+    "* Assortment\n",
+    "* Promo2\n",
+    "* PromoInterval\n",
+    "* month\n",
+    "* CompetitionOpenSinceYear\n",
+    "* CompetitionOpenSinceMonth\n",
+    "* Promo2SinceYear\n",
+    "* year\n",
+    "\n",
+    "\n",
+    "lowering data scale (numeric datas):\n",
+    "* Promo2SinceWeek: int8\n",
+    "* CompetitionDistance: int32\n",
+    "* Customers: int16\n",
+    "* Sales: int32\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0026a0bd",
+   "metadata": {},
+   "source": [
+    "### Type Optimazation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f3f755ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data[\n",
+    "    [\n",
+    "        \"Promo\",\n",
+    "        \"StateHoliday\",\n",
+    "        \"SchoolHoliday\",\n",
+    "        \"StoreType\",\n",
+    "        \"Assortment\",\n",
+    "        \"Promo2\",\n",
+    "        \"PromoInterval\",\n",
+    "        \"month\",\n",
+    "        \"CompetitionOpenSinceMonth\",\n",
+    "        \"Promo2SinceYear\",\n",
+    "        \"year\",\n",
+    "    ]\n",
+    "] = clean_data[\n",
+    "    [\n",
+    "        \"Promo\",\n",
+    "        \"StateHoliday\",\n",
+    "        \"SchoolHoliday\",\n",
+    "        \"StoreType\",\n",
+    "        \"Assortment\",\n",
+    "        \"Promo2\",\n",
+    "        \"PromoInterval\",\n",
+    "        \"month\",\n",
+    "        \"CompetitionOpenSinceMonth\",\n",
+    "        \"Promo2SinceYear\",\n",
+    "        \"year\",\n",
+    "    ]\n",
+    "].astype(\n",
+    "    \"category\"\n",
+    ")\n",
+    "\n",
+    "clean_data[\"Sales\"] = clean_data[\"Sales\"].astype(\"Int32\")\n",
+    "clean_data[\"CompetitionOpenSinceYear\"] = clean_data[\"CompetitionOpenSinceYear\"].astype(\"Int16\")\n",
+    "clean_data[\"CompetitionDistance\"] = clean_data[\"CompetitionDistance\"].astype(\"Float32\")\n",
+    "clean_data[\"Promo2SinceWeek\"] = clean_data[\"Promo2SinceWeek\"].astype(\"Int8\")\n",
+    "clean_data[\"Customers\"] = clean_data[\"Customers\"].astype(\"Int16\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5913e486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 168607 entries, 0 to 168606\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                     Non-Null Count   Dtype   \n",
+      "---  ------                     --------------   -----   \n",
+      " 0   Sales                      168607 non-null  Int32   \n",
+      " 1   Customers                  168607 non-null  Int16   \n",
+      " 2   Promo                      168607 non-null  category\n",
+      " 3   StateHoliday               168607 non-null  category\n",
+      " 4   SchoolHoliday              168607 non-null  category\n",
+      " 5   StoreType                  168607 non-null  category\n",
+      " 6   Assortment                 168607 non-null  category\n",
+      " 7   CompetitionDistance        168179 non-null  Float32 \n",
+      " 8   CompetitionOpenSinceMonth  114961 non-null  category\n",
+      " 9   CompetitionOpenSinceYear   114961 non-null  Int16   \n",
+      " 10  Promo2                     168607 non-null  category\n",
+      " 11  Promo2SinceWeek            168607 non-null  Int8    \n",
+      " 12  Promo2SinceYear            168607 non-null  category\n",
+      " 13  PromoInterval              168607 non-null  category\n",
+      " 14  month                      168607 non-null  category\n",
+      " 15  year                       168607 non-null  category\n",
+      " 16  HasCompetition             168607 non-null  category\n",
+      "dtypes: Float32(1), Int16(2), Int32(1), Int8(1), category(12)\n",
+      "memory usage: 4.8 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d77b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data.loc[clean_data.duplicated()].size\n",
+    "# ok!"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
