--- a/1.Sales Prediction/train.ipynb
+++ b/1.Sales Prediction/train.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1a6ec5ef",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "07df1ee5",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "4           NaN      6    15  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2c072db0",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f8e3fe34",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c5025a77",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "max        2015.000000      12.000000      15.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "bf26d30f",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "af747690",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
       "    Promo2 not avilable percentage: 50.29387866458688\n",
       "    \n",
       "\n",
-      "    competition hasn't per()centage: 0.2538447395422491\n",
+      "    competition hasn't percentage: 0.2538447395422491\n",
       "    \n"
      ]
     }
@@ -753,7 +753,7 @@
     "    \"\"\")\n",
     "\n",
     "print(f\"\"\"\n",
-    "    competition hasn't per()centage: {_data['CompetitionDistance'].isna().sum()/len(_data['CompetitionDistance']) * 100}\n",
+    "    competition hasn't percentage: {_data['CompetitionDistance'].isna().sum()/len(_data['CompetitionDistance']) * 100}\n",
     "    \"\"\")"
    ]
   },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "ec5f47e0",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "b378bbae",
    "metadata": {},
    "outputs": [],
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "f3f755ee",
    "metadata": {},
    "outputs": [],
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "5913e486",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c8d77b53",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,6 +949,97 @@
    "source": [
     "clean_data.loc[clean_data.duplicated()].size\n",
     "# ok!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2d8ad8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent of nullable values:  31.82%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Percent of nullable values: {(clean_data.isnull().any(axis=1).sum() / len(clean_data)) * 100: .2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ac7588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "134c2744",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CompetitionOpenSinceMonth    53646\n",
+      "CompetitionOpenSinceYear     53646\n",
+      "CompetitionDistance            428\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_counts = clean_data.isnull().sum()\n",
+    "print(missing_counts[missing_counts > 0].sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ad86b68b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2         False\n",
+       "3         False\n",
+       "4         False\n",
+       "          ...  \n",
+       "168602    False\n",
+       "168603    False\n",
+       "168604    False\n",
+       "168605    False\n",
+       "168606    False\n",
+       "Name: HasCompetition, Length: 168607, dtype: bool"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data.isnull()['HasCompetition']"
    ]
   }
  ],
